# bigint_c

./: .clang-tidy  README.md  gcovr.cfg  meson.build  meson.options  test.cpp  test1.cpp
.github/workflows/: build.yml  lint.yml  meson.yml  musl.yml  test.yml
data/Totto16-patch-1/: coverage.xml
data/add_ci/: coverage.xml
data/main/: coverage.xml
data/multiplication/: coverage.xml
data/windows_support/: coverage.xml
src/: meson.build
src/lib/: lib.c  lib.h  lib_cpp.hpp  meson.build
src/lib/cpp/: const_utils.hpp  lib.hpp  literal.hpp  meson.build
src/public/: bigint_c.h  bigint_cpp.hpp  meson.build
src/utils/: assert.c  assert.h  meson.build  utils.h
test/: entry.cpp  initialization.cpp  initialization_c.cpp  meson.build
test/helper/: helper.cpp  helper.hpp  matcher.hpp  meson.build  printer.hpp
test/src/: bigint_cpp.cpp  meson.build
test/tests/: compile_time_tests.cpp  cpp_only_tests.cpp  initialization_c.cpp  initialization_cpp.cpp  normal.cpp  raw_c_tests.cpp
